<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="144dp"
                android:layout_height="148dp"
                android:src="@drawable/logo"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_principal"
                android:textSize="24sp"
                android:layout_below="@+id/logo"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:layout_below="@+id/titulo"
                android:layout_marginTop="16dp"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:layout_below="@+id/txtEmail"
                android:layout_marginTop="16dp"
                android:inputType="textPassword"
                android:minHeight="48dp"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPassword"
                android:layout_marginTop="16dp"
                android:text="@string/btn_login"/>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLogin"
                android:layout_marginTop="16dp"
                android:text="@string/btn_signup"
                android:backgroundTint="@color/cardview_dark_background"/>
    </RelativeLayout>

</RelativeLayout>
